Add the manifest args