@@ -12,8 +12,10 @@ java {
 
 jar {
     manifest.attributes([
-           'Main-Class':  'net.neoforged.serverstarterjar.Main',
-           'Premain-Class': 'net.neoforged.serverstarterjar.Agent',
-           'Launcher-Agent-Class': 'net.neoforged.serverstarterjar.Agent'
+            'Main-Class'          : 'net.neoforged.serverstarterjar.Main',
+            'Premain-Class'       : 'net.neoforged.serverstarterjar.Agent',
+            'Launcher-Agent-Class': 'net.neoforged.serverstarterjar.Agent',
+            'Add-Exports'         : 'java.base/jdk.internal.loader',
+            'Add-Opens'           : 'java.base/java.lang'
     ])
 }
